# Fibonacci

./: Makefile  README.md  pyproject.toml
src/fibonacci/: __main__.py
tests/: __init__.py  test_fib.py
