[project]
name = "fibonacci"
version = "0.1.0"
description = ""
authors = [
    {name = "Ваше Имя",email = "khabibtime@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.13.2,<0.14.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.poetry]
packages = [{include = "fibonacci", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
